--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
   main { flex:1; min-width:0; overflow:auto; padding:20px; box-sizing:border-box; }
 
   /* Controls */
-  .controls { display:flex; gap:8px; margin-bottom:12px; align-items:center; }
-  .sel { display:flex; flex-direction:column; gap:6px; }
-  .sel button.current { display:flex; justify-content:space-between; align-items:center; padding:8px 10px; border-radius:8px; border:1px solid #cfcfcf; background:#fff; cursor:pointer; }
-  .menu { position:relative; }
-  .menu-list { position:absolute; left:0; right:0; max-height:220px; overflow:auto; border:1px solid #ddd; background:white; margin-top:6px; border-radius:8px; box-shadow:0 6px 16px rgba(0,0,0,0.06); z-index:40; }
-  .menu-list button { display:block; width:100%; padding:8px 10px; text-align:left; border:0; background:transparent; cursor:pointer; }
-  .menu-list button[aria-selected="true"] { background:#f2f6ff; }
+  .controls { display:flex; gap:12px; margin-bottom:12px; align-items:flex-start; }
 
-  /* Months row (wrap on small) */
+  /* Year wheel */
+  .year-wheel { display:flex; flex-direction:column; align-items:center; gap:6px; width:110px; }
+  .wheel-btn { width:100%; padding:6px 8px; border-radius:6px; border:1px solid #ddd; background:white; cursor:pointer; }
+  .wheel-view { width:100%; height:72px; overflow:hidden; border-radius:8px; border:1px solid #e6e6e6; display:flex; align-items:center; justify-content:center; position:relative; background:#fafafa; }
+  .wheel-list { position:absolute; left:0; right:0; display:flex; flex-direction:column; align-items:center; transition:transform .18s cubic-bezier(.2,.9,.2,1); }
+  .wheel-item { width:100%; padding:6px 8px; text-align:center; font-weight:600; opacity:0.45; font-size:0.95em; }
+  .wheel-item.center { opacity:1; font-size:1.15em; }
+
+  /* Months row */
   .months { display:flex; flex-wrap:wrap; gap:6px; }
   .month-btn { padding:6px 8px; border-radius:6px; border:1px solid #ddd; background:white; cursor:pointer; font-size:0.95em; }
   .month-btn[aria-pressed="true"] { background:#eef3ff; border-color:#b7c6ff; font-weight:600; }
@@ -32,14 +34,14 @@
   /* Small screens */
   @media (max-width:600px) {
     body { flex-direction:column; height:auto; }
-    nav { width:100%; max-height:120px; overflow:hidden; transition:max-height .26s ease, box-shadow .18s ease; border-right:none; border-bottom:1px solid #ddd; }
+    nav { width:100%; max-height:160px; overflow:hidden; transition:max-height .26s ease, box-shadow .18s ease; border-right:none; border-bottom:1px solid #ddd; }  /* edit max-height here for mobile preview size */
     nav.expanded { max-height:80vh; overflow:auto; box-shadow:0 6px 16px rgba(0,0,0,0.06); }
     .nav-peek-handle { position:absolute; right:12px; top:12px; z-index:3; padding:6px 8px; font-size:13px; border-radius:6px; border:1px solid #ccc; background:white; cursor:pointer; }
     nav::after { content:""; position:absolute; left:0; right:0; bottom:0; height:36px; pointer-events:none; background:linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); }
   }
 
-  /* Accessibility focus styles */
-  .nav-peek-handle:focus, .menu-list button:focus, .month-btn:focus, a.item:focus { outline:2px solid Highlight; outline-offset:2px; }
+  /* Focus */
+  .nav-peek-handle:focus, .month-btn:focus, a.item:focus, .wheel-btn:focus, .wheel-view:focus { outline:2px solid Highlight; outline-offset:2px; }
 </style>
 </head>
 <body>
@@ -50,16 +52,18 @@
       <h2 style="margin:0 0 8px 0">Articles</h2>
     </div>
 
-    <div class="controls" id="controls">
-      <div class="sel" id="yearSel">
-        <label for="yearButton" style="font-size:0.85em;color:#333">Year</label>
-        <div class="menu">
-          <button id="yearButton" class="current" aria-haspopup="listbox" aria-expanded="false">—</button>
-          <div id="yearList" class="menu-list" role="listbox" tabindex="-1" hidden></div>
+    <div class="controls">
+      <!-- Year wheel selector -->
+      <div class="year-wheel" aria-label="Year selector">
+        <button id="yearUp" class="wheel-btn" aria-label="Previous year">Up</button>
+        <div id="wheelView" class="wheel-view" tabindex="0" role="spinbutton" aria-label="Year" aria-valuenow="">
+          <div id="wheelList" class="wheel-list"></div>
         </div>
+        <button id="yearDown" class="wheel-btn" aria-label="Next year">Down</button>
       </div>
 
-      <div class="sel" id="monthSel">
+      <!-- Month buttons -->
+      <div>
         <label style="font-size:0.85em;color:#333">Month</label>
         <div class="months" id="monthsRow" role="toolbar" aria-label="Months"></div>
       </div>
@@ -74,30 +78,29 @@
 
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
-/* Lightweight archive UI: year + month navigation, month-list rendering only (for performance).
-   Expects index.json to be an array of { filename, title, date (YYYY-MM-DD or YYYYMMDD), score }.
-*/
-
 const monthsNames = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
 const listEl = document.getElementById('list');
 const contentEl = document.getElementById('content');
-const yearButton = document.getElementById('yearButton');
-const yearList = document.getElementById('yearList');
 const monthsRow = document.getElementById('monthsRow');
 const peekHandle = document.getElementById('peekHandle');
 const sidebar = document.getElementById('sidebar');
 
+const wheelList = document.getElementById('wheelList');
+const wheelView = document.getElementById('wheelView');
+const yearUp = document.getElementById('yearUp');
+const yearDown = document.getElementById('yearDown');
+
 let indexData = [];
-let grouped = {}; // { year: { monthIndex: [items] } }
+let grouped = {};
 let years = [];
 let selectedYear = null;
-let selectedMonth = null; // 0-based
+let selectedMonth = null;
 const articleCache = new Map();
 
 function parseDateParts(d) {
   if (!d) return null;
   const s = String(d);
-  if (/^\d{4}-\d{2}-\d{2}$/.test(s)) return { year: +s.slice(0,4), month: +s.slice(5,7), day: +s.slice(8,10) };
+  if (/^\d{4}-\d{2}-\d{2}$/.test(s)) return { year:+s.slice(0,4), month:+s.slice(5,7), day:+s.slice(8,10) };
   if (/^\d{8}$/.test(s)) return { year:+s.slice(0,4), month:+s.slice(4,6), day:+s.slice(6,8) };
   return null;
 }
@@ -105,10 +108,10 @@ function parseDateParts(d) {
 function formatDate(d) {
   const p = parseDateParts(d);
   if (!p) return '';
-  const m = String(p.month).padStart(2,'0');
-  const day = String(p.day).padStart(2,'0');
-  return `${p.year}-${m}-${day}`;
+  return `${p.year}-${String(p.month).padStart(2,'0')}-${String(p.day).padStart(2,'0')}`;
 }
+
+function escapeHtml(s){ return (s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
 
 function createItemNode(item) {
   const a = document.createElement('a');
@@ -121,11 +124,9 @@ function createItemNode(item) {
   return a;
 }
 
-function escapeHtml(s){ return (s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-
 function renderMonthList(year, monthIndex) {
   listEl.innerHTML = '';
-  if (!grouped[year] || !grouped[year][monthIndex] || grouped[year][monthIndex].length === 0) {
+  if (!grouped[year] || !grouped[year][monthIndex]) {
     listEl.innerHTML = '<p>No articles for this month.</p>';
     return;
   }
@@ -134,237 +135,137 @@ function renderMonthList(year, monthIndex) {
   listEl.appendChild(frag);
 }
 
-function populateYearList() {
-  yearList.innerHTML = '';
-  years.forEach(y => {
-    const btn = document.createElement('button');
-    btn.textContent = y;
-    btn.setAttribute('role','option');
-    btn.tabIndex = 0;
-    btn.addEventListener('click', () => { selectYear(y); toggleYearMenu(false); });
-    yearList.appendChild(btn);
-  });
-}
-
 function populateMonthsRow() {
   monthsRow.innerHTML = '';
-  monthsNames.forEach((m, i) => {
+  monthsNames.forEach((m,i) => {
     const b = document.createElement('button');
     b.className = 'month-btn';
     b.textContent = m;
     b.setAttribute('aria-pressed','false');
-    b.addEventListener('click', () => { selectMonth(i); });
+    b.addEventListener('click', () => selectMonth(i));
     monthsRow.appendChild(b);
   });
 }
 
 function updateMonthButtons() {
-  const btns = monthsRow.querySelectorAll('.month-btn');
-  btns.forEach((b,i) => b.setAttribute('aria-pressed', (i===selectedMonth).toString()));
-}
-
-function selectYear(y) {
-  if (!y) return;
-  selectedYear = +y;
-  yearButton.textContent = String(y);
-  // default to January or keep previous month if present
-  if (selectedMonth === null) selectedMonth = 0;
-  // ensure month exists with articles: if not, pick first month that has articles
-  const monthsForYear = grouped[selectedYear] || {};
-  if (!monthsForYear[selectedMonth] || monthsForYear[selectedMonth].length === 0) {
-    const available = Object.keys(monthsForYear).map(k=>+k).sort((a,b)=>a-b);
-    selectedMonth = available.length ? available[0] : 0;
-  }
-  updateMonthButtons();
-  renderMonthList(selectedYear, selectedMonth);
+  monthsRow.querySelectorAll('.month-btn').forEach((b,i) =>
+    b.setAttribute('aria-pressed', (i===selectedMonth).toString())
+  );
 }
 
 function selectMonth(mi) {
   selectedMonth = mi;
   updateMonthButtons();
-  if (selectedYear) renderMonthList(selectedYear, selectedMonth);
+  if (selectedYear != null) renderMonthList(selectedYear, selectedMonth);
 }
 
-function toggleYearMenu(show) {
-  const isOpen = yearList.hidden === false;
-  const shouldOpen = (typeof show === 'boolean') ? show : !isOpen;
-  yearList.hidden = !shouldOpen;
-  yearButton.setAttribute('aria-expanded', String(shouldOpen));
-  if (shouldOpen) {
-    yearList.focus();
+// ----- Year wheel logic -----
+const VISIBLE_COUNT = 5;
+let yearWindowStart = 0;
+
+function renderWheel() {
+  wheelList.innerHTML = '';
+  if (!years.length) return;
+  yearWindowStart = Math.max(0, Math.min(yearWindowStart, years.length - VISIBLE_COUNT));
+
+  const frag = document.createDocumentFragment();
+  for (let i=0;i<VISIBLE_COUNT;i++) {
+    const idx = yearWindowStart + i;
+    const d = document.createElement('div');
+    d.className = 'wheel-item';
+    d.textContent = years[idx] ?? '';
+    frag.appendChild(d);
   }
+  wheelList.appendChild(frag);
+
+  const center = Math.floor(VISIBLE_COUNT/2);
+  wheelList.querySelectorAll('.wheel-item').forEach((el,i)=>{
+    el.classList.toggle('center', i===center);
+  });
+
+  if (selectedYear!=null) wheelView.setAttribute('aria-valuenow', String(selectedYear));
 }
 
-// Sidebar click handlers
-listEl.addEventListener('click', (ev) => {
-  const a = ev.target.closest('a.item');
-  if (!a) return;
-  ev.preventDefault();
-  const filename = a.dataset.filename;
-  if (!filename) return;
-  if (location.hash.slice(1) !== filename) location.hash = filename;
-  loadArticle(filename);
-  if (window.matchMedia && window.matchMedia('(max-width:600px)').matches) {
-    document.body.classList.remove('show-nav');
-    sidebar.classList.remove('expanded');
-    peekHandle.setAttribute('aria-expanded','false');
-  }
+function refreshWheel() {
+  const idx = years.indexOf(selectedYear);
+  if (idx>=0) yearWindowStart = idx - Math.floor(VISIBLE_COUNT/2);
+  renderWheel();
+}
+
+function stepYear(delta) {
+  let idx = years.indexOf(selectedYear);
+  if (idx<0) idx = 0;
+  idx = Math.max(0, Math.min(years.length-1, idx+delta));
+  selectedYear = years[idx];
+
+  const monthsForYear = grouped[selectedYear] || {};
+  const available = Object.keys(monthsForYear).map(Number).sort((a,b)=>a-b);
+  if (!available.includes(selectedMonth)) selectedMonth = available[0] ?? 0;
+
+  refreshWheel();
+  updateMonthButtons();
+  renderMonthList(selectedYear, selectedMonth);
+}
+
+yearUp.addEventListener('click', ()=>stepYear(-1));
+yearDown.addEventListener('click', ()=>stepYear(1));
+wheelView.addEventListener('keydown', ev=>{
+  if (ev.key==='ArrowUp') { ev.preventDefault(); stepYear(-1); }
+  if (ev.key==='ArrowDown') { ev.preventDefault(); stepYear(1); }
+});
+wheelView.addEventListener('wheel', ev=>{ ev.preventDefault(); stepYear(Math.sign(ev.deltaY)); });
+
+// Sidebar interactions
+listEl.addEventListener('click', ev=>{
+  const a = ev.target.closest('a.item'); if (!a) return;
+  ev.preventDefault(); const f=a.dataset.filename;
+  if (location.hash.slice(1)!==f) location.hash=f;
+  loadArticle(f);
+  if (matchMedia('(max-width:600px)').matches) { sidebar.classList.remove('expanded'); peekHandle.setAttribute('aria-expanded','false'); }
 });
 
-yearButton.addEventListener('click', (ev) => { ev.stopPropagation(); toggleYearMenu(); });
-document.addEventListener('click', (ev) => { if (!yearList.contains(ev.target) && ev.target !== yearButton) toggleYearMenu(false); });
-
-peekHandle.addEventListener('click', (ev) => {
+peekHandle.addEventListener('click', ev=>{
   ev.stopPropagation();
-  const isOpen = document.body.classList.toggle('show-nav');
-  if (isOpen) { sidebar.classList.add('expanded'); peekHandle.setAttribute('aria-expanded','true'); }
-  else { sidebar.classList.remove('expanded'); peekHandle.setAttribute('aria-expanded','false'); }
+  const isOpen = sidebar.classList.toggle('expanded');
+  peekHandle.setAttribute('aria-expanded', String(isOpen));
 });
 
-// keyboard: close with Escape
-document.addEventListener('keydown', (ev) => {
-  if (ev.key === 'Escape') {
-    if (!yearList.hidden) toggleYearMenu(false);
-    if (document.body.classList.contains('show-nav')) {
-      document.body.classList.remove('show-nav'); sidebar.classList.remove('expanded'); peekHandle.setAttribute('aria-expanded','false'); peekHandle.focus();
-    }
-  }
-});
-
-// Article loading
 async function loadArticle(filename) {
   if (!filename) return;
   contentEl.innerHTML = '<p>Loading...</p>';
-  const cached = articleCache.get(filename);
-  if (cached && cached.html) { contentEl.innerHTML = cached.html; window.scrollTo(0,0); return; }
-  try {
-    const r = await fetch('responses/' + filename);
-    if (!r.ok) { contentEl.innerHTML = '<p>Cannot load file.</p>'; return; }
-    const md = await r.text();
-    const html = marked.parse(md);
-    articleCache.set(filename, { md, html });
-    contentEl.innerHTML = html; window.scrollTo(0,0);
-  } catch (err) {
-    console.error(err); contentEl.innerHTML = '<p>Error loading.</p>';
-  }
+  if (articleCache.has(filename)) { contentEl.innerHTML = articleCache.get(filename); return; }
+  const r = await fetch('responses/'+filename);
+  const md = await r.text();
+  const html = marked.parse(md);
+  articleCache.set(filename, html);
+  contentEl.innerHTML = html;
 }
 
-// Load index and build grouped structure
 async function loadIndex() {
-  try {
-    const res = await fetch('index.json');
-    if (!res.ok) throw new Error('index.json not found');
-    indexData = await res.json();
+  const res = await fetch('index.json');
+  indexData = await res.json();
 
-    // build grouped: year -> monthIndex(0-11) -> [items], sorted desc by date
-    grouped = {};
-    indexData.forEach(item => {
-      const p = parseDateParts(item.date);
-      if (!p) return;
-      const y = p.year;
-      const m = p.month - 1;
-      grouped[y] = grouped[y] || {};
-      grouped[y][m] = grouped[y][m] || [];
-      grouped[y][m].push(item);
-    });
-    // sort each month descending by date
-    Object.keys(grouped).forEach(y => {
-      Object.keys(grouped[y]).forEach(m => {
-        grouped[y][m].sort((a,b) => (b.date||'').localeCompare(a.date||''));
-      });
-    });
+  grouped = {};
+  indexData.forEach(it=>{
+    const p = parseDateParts(it.date); if (!p) return;
+    const y=p.year, m=p.month-1;
+    grouped[y] = grouped[y] || {};
+    grouped[y][m] = grouped[y][m] || [];
+    grouped[y][m].push(it);
+  });
+  Object.keys(grouped).forEach(y=>Object.keys(grouped[y]).forEach(m=>{
+    grouped[y][m].sort((a,b)=>(b.date||'').localeCompare(a.date||''));
+  }));
 
-    years = Object.keys(grouped).map(v=>+v).sort((a,b)=>b-a);
-    populateYearList();
-    populateMonthsRow();
+  years = Object.keys(grouped).map(Number).sort((a,b)=>b-a);
+  populateMonthsRow();
 
-    // Initial selection — prefer URL hash, otherwise pick the article closest to (today - 10 years)
-    const initialHash = location.hash ? location.hash.slice(1) : null;
-    let initialFilename = initialHash || (indexData[0] && indexData[0].filename);
+  selectedYear = years[0] ?? null;
+  selectedMonth = 0;
 
-    // If there's no hash, prefer the article closest to today's date 10 years ago.
-    if (!initialHash) {
-      // compute target date (UTC) = today minus 10 years
-      const now = new Date();
-      const targetUTC = new Date(Date.UTC(now.getUTCFullYear() - 10, now.getUTCMonth(), now.getUTCDate()));
-
-      // helper to convert item.date -> Date (UTC)
-      function parseToUTCDate(d) {
-        const p = parseDateParts(d);
-        if (!p) return null;
-        return new Date(Date.UTC(p.year, p.month - 1, p.day));
-      }
-
-      let closest = null;
-      let minDiff = Infinity;
-      indexData.forEach(it => {
-        const dt = parseToUTCDate(it.date);
-        if (!dt) return;
-        const diff = Math.abs(dt - targetUTC);
-        if (diff < minDiff) { minDiff = diff; closest = it; }
-      });
-      if (closest) initialFilename = closest.filename;
-    }
-
-    // If we found an initial filename, set selectedYear/selectedMonth to its date if possible
-    if (initialFilename) {
-      const found = indexData.find(it => it.filename === initialFilename);
-      if (found) {
-        const p = parseDateParts(found.date);
-        if (p) { selectedYear = p.year; selectedMonth = p.month - 1; }
-      }
-    }
-
-	// Hard fallback: force a specific article if nothing else selected
-	if (selectedYear === null && selectedMonth === null) {
-	  const forcedFilename = 'out_20151013-artificial-intelligen_deepseek-v3.1-n.md';
-	  const forced = indexData.find(it => it.filename === forcedFilename);
-	  if (forced) {
-		const p = parseDateParts(forced.date);
-		if (p) {
-		  selectedYear = p.year;
-		  selectedMonth = p.month - 1;
-		}
-	  }
-	}
-    // fallback defaults (most recent if other fallback not found)
-    if (selectedYear === null) selectedYear = years.length ? years[0] : null;
-    if (selectedMonth === null) {
-      const monthsForYear = grouped[selectedYear] || {};
-      const available = Object.keys(monthsForYear).map(k=>+k).sort((a,b)=>a-b);
-      selectedMonth = available.length ? available[0] : 0;
-    }
-
-    // update UI and render
-    if (selectedYear) {
-      yearButton.textContent = String(selectedYear);
-      updateMonthButtons();
-      renderMonthList(selectedYear, selectedMonth);
-    }
-
-    // load article if a filename was chosen by hash or the closest-date logic
-    if (initialFilename) loadArticle(initialFilename);
-
-
-    // update UI and render
-    if (selectedYear) {
-      yearButton.textContent = String(selectedYear);
-      updateMonthButtons();
-      renderMonthList(selectedYear, selectedMonth);
-    }
-
-    // load article if hash referenced
-    if (initialHash) loadArticle(initialHash);
-
-    // hashchange handler
-    window.addEventListener('hashchange', () => {
-      const f = location.hash.slice(1);
-      if (f) loadArticle(f);
-    });
-
-  } catch (err) {
-    console.error(err); contentEl.innerHTML = '<p>Cannot load index.</p>';
-  }
+  refreshWheel();
+  updateMonthButtons();
+  if (selectedYear!=null) renderMonthList(selectedYear, selectedMonth);
 }
 
 loadIndex();
