--- a/index.html
+++ b/index.html
@@ -168,9 +168,10 @@ function renderWheel() {
   if (!years.length) return;
 
   // clamp yearWindowStart so the window fits inside the years array
+  //const maxStart = Math.max(0, years.length - VISIBLE_COUNT);
+  //yearWindowStart = Math.max(0, Math.min(yearWindowStart, maxStart));
   const maxStart = Math.max(0, years.length - VISIBLE_COUNT);
-  yearWindowStart = Math.max(0, Math.min(yearWindowStart, maxStart));
-
+ 
   const frag = document.createDocumentFragment();
   for (let i=0;i<VISIBLE_COUNT;i++) {
     const idx = yearWindowStart + i;
@@ -194,10 +195,9 @@ function renderWheel() {
 function refreshWheelAroundIndex(index) {
   // center the window on index when possible
   const center = Math.floor(VISIBLE_COUNT/2);
+  // center the window on the requested index; allow start to be negative or > maxStart so the selected
+  // year appears in the middle and out-of-range slots render empty.
   let start = index - center;
-  const maxStart = Math.max(0, years.length - VISIBLE_COUNT);
-  if (start < 0) start = 0;
-  if (start > maxStart) start = maxStart;
   yearWindowStart = start;
   renderWheel();
 }
