--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+
+<!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Retrospectives on drug discovery">
+  <meta property="og:description" content="Drug pipeline history">
+  <meta property="og:url" content="https://github.com/jshilts/out-the-pipeline/">
+  <meta property="og:image" content="https://github.com/jshilts/out-the-pipeline//assets/previewpic.png">
+  <meta property="og:image:alt" content="Drug pipeline history">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Retrospectives on drug discovery">
+  <meta name="twitter:description" content="Drug pipeline history">
+  <meta name="twitter:image" content="https://github.com/jshilts/out-the-pipeline//assets/previewpic.png">
+
 <title>Retrospectives on drug discovery</title>
 <style>
   /* Layout */
