--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Retrospectives on drug discovery">
   <meta property="og:description" content="LLMs looking back at historical 'In the Pipeline' articles">
-  <meta property="og:url" content="https://github.com/jshilts/out-the-pipeline/">
+  <meta property="og:url" content="https://jshilts.github.io/out-the-pipeline/">
   <meta property="og:image" content="https://jshilts.github.io/out-the-pipeline/assets/previewpic.png">
   <meta property="og:image:alt" content="Drug pipeline history">
 
