switching twitter preview image to 'summary' instead of 'summary_large' since can't get large one to work

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   <meta property="og:image:alt" content="Drug pipeline history">
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
+  <!--<meta name="twitter:card" content="summary_large_image"> -->
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Retrospectives on drug discovery">
   <meta name="twitter:description" content="LLMs looking back at historical 'In the Pipeline' articles">
-  <meta name="twitter:image" content="https://jshilts.github.io/out-the-pipeline/assets/previewpic.png">
+  <!--<meta name="twitter:image" content="https://jshilts.github.io/out-the-pipeline/assets/previewpic.png">-->
+  <meta name="twitter:image" content="https://jshilts.github.io/out-the-pipeline/assets/previewpic_square.png">
+
 
 <title>Retrospectives on drug discovery</title>
 <style>
